--- a/plugins/component/component-template/deps.toml.templ
+++ b/plugins/component/component-template/deps.toml.templ
@@ -11,3 +11,6 @@ keyvalue = "https://github.com/Mattilsynet/map-nats-kv/archive/v0.0.2-pre-15.tar
 {{ if .ComponentCronJob -}}
 cronjob = "https://github.com/Mattilsynet/map-cronjob-provider-wc/archive/v0.0.4.tar.gz"
 {{ end -}}
+{{ if .ComponentCloudrunAdmin -}}
+me-gcp-cloudrunjob-admin= "https://github.com/Mattilsynet/map-me-gcp-cloudrunjob/archive/v0.0.2.8.tar.gz"
+{{ end -}}
