--- a/plugins/component/component-template/go.mod.templ
+++ b/plugins/component/component-template/go.mod.templ
@@ -1,9 +1,12 @@
 module {{.Repository}}
 go 1.23.2
 
-require go.wasmcloud.dev/component v0.0.5
+require go.wasmcloud.dev/component v0.0.6
 
 require (
-	github.com/bytecodealliance/wasm-tools-go v0.3.1
-	github.com/nats-io/nats.go v1.37.0
+	github.com/bytecodealliance/wasm-tools-go v0.3.2
+	github.com/nats-io/nats.go v1.41.2
+	{{ if .ComponentCloudrunAdmin -}}
+        github.com/Mattilsynet/mapis v0.0.5
+	{{ end -}}
 )
